--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,6 @@
       "128": "calc2.png"
     }
   },
-  "background": {
-    "service_worker": "background.js"
-  },
   "icons": {
     "16": "calc2.png",
     "48": "calc2.png",
@@ -23,7 +20,7 @@
   "extension_pages": "script-src 'self'; object-src 'self';"
 },
 
-  "permissions": ["windows"],
+  "permissions": [],
   "host_permissions": []
 }
 
